# dataflow

./: .gitmodules  CMakeLists.txt  README.md  start_make.sh
cmake/: proto2cpp.cmake  proto2grpc.cmake  third_party.cmake  util.cmake
dataflow/core/: main.cc
dataflow/core/base/: CMakeLists.txt  class_register.h  op_register.h  test.cc  thread.h
dataflow/core/graph/: CMakeLists.txt  graph.cc  graph.h  graph_iter.h  graph_viz.h  proto_parse.cc  proto_parse.h  udf_graph.cc  udf_graph.h
dataflow/core/ops/: CMakeLists.txt  blob_matrix.h  conv.h  fully_connected.h  innerproduct.h  logloss.h  lstm.h  matrix_blob.cc  matrix_blob.h  operator.cc  operator.h  pooling.h  reader.h  sigmoid.h
dataflow/core/proto/: CMakeLists.txt  dataflow.proto
dataflow/core/task/: task.h
dataflow/models/: dnn.txt  googlenet_model_complete.txt
scripts/: ProtoBuf.cmake  gen_dot.sh
